--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <h1>Home</h1>
         <p>if you go to <a href="https://github.com/schmo-web/portfolio-website">github repository</a>, you can look up my website</p>
     <h2> The testing page</h2>
-    <p></p>this is the <a Href="testing.html">testing page</a></p>
+    <p><ul></ul>this is the <a href="projects.html"> projects </a>page</p>
     </body>
 </html>
