--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,10 @@
     <body>
         <h1>Project 1</h1>
         <p> audio narrative <a href="https://github.com/schmo-web/audio-narrative-schmo">github repository</a>, you can look at my audio narrative</p>
+    <h2>Audio narrative</h2>
+    <audio controls>
+        <source src="/assets/schmo audio project.mp3">
+    </audio>
         <p> Here  is the readme for audio narrative</p>
         <p>Summary</p>
 The Battle of the Bulge, fought from December 16, 1944, to January 16, 1945, was Nazi Germany's final major offensive on the Western Front during World War II. The Germans aimed to split the Allied forces and capture the vital port of Antwerp. Launching a surprise attack through the Ardennes Forest, they created a significant "bulge" in the Allied lines. Despite initial advances, the offensive was ultimately repelled by the Allies. The battle was the bloodiest for American forces in Western Europe, with approximately 20,000 U.S. soldiers killed and tens of thousands more wounded, missing, or captured. The German defeat depleted their resources, paving the way for the Allied invasion of Germany.
@@ -31,7 +35,7 @@ All of the above are public domain
         <h1> Project 2</h1>
         <p> video essay this is the <a Href="https://github.com/schmo-web/video-essay-schmo">github repository</a></p>
         <p> Here is my readme for video essay:</p>
-<p>(https://youtu.be/-JInc5UDZF8)</p>
+<p><a href=https://youtu.be/-JInc5UDZF8> Link to the video.</a></p>
 
     In my video essay, I explore how HBO's Band of Brothers serves as more than just an exceptional war drama—it is a powerful tool for historical preservation and cultural memory. My thesis argues that the series' emotional storytelling, coupled with firsthand veteran interviews and its commitment to historical accuracy, allows it to bridge the gap between textbook history and lived experience. By immersing viewers in the harsh realities of World War II, Band of Brothers fosters empathy for soldiers and contributes to shaping the public’s understanding of war. I chose this subject matter because of the unique way Band of Brothers presents history not just as a series of battles, but as deeply personal and human narratives. This approach is vital, as many viewers may lack an understanding of the real sacrifices veterans made during the war.
     
